유튜브 크롤링

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,8 @@
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://unpkg.com/vue-infinite-loading@^2/dist/vue-infinite-loading.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/vue-lazy-youtube-video"></script>
+    <link rel="stylesheet" href="https://unpkg.com/vue-lazy-youtube-video/dist/style.css"></link>
   </head>
   <body>
     <noscript>
