--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!--지도 api-->
+  <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script> -->
+  <!-- <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a0064e7e9af3feb23b87a09d13dbc1b1&libraries=services"></script>
+  <script>Kakao.init('a0064e7e9af3feb23b87a09d13dbc1b1');</script> -->
 </head>
 
 <body>
