임시저장, 기부요청페이지 오류 수정
Former-commit-id: e1d2bd0d0811ba126bbc7b2bd57e7bfa9a42902d

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,8 @@
     <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script> -->
   <!-- <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a0064e7e9af3feb23b87a09d13dbc1b1&libraries=services"></script>
   <script>Kakao.init('a0064e7e9af3feb23b87a09d13dbc1b1');</script> -->
+  <script src="https://kit.fontawesome.com/8d37770efa.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
